--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <button type="button" id="begButton" onclick="dealAll(player,deck),beg(player,kicked)">Beg?</button>
+    <div class="hand" id="player1"> </div>
+    <div class="hand" id="player2"> </div>
+    <div class="hand" id="player3"> </div>
+    <div class="hand" id="player4"> </div>
+    <br>
+    <div id="kicked"> </div>
     <script src="script.js"></script>
   </body>
 </html>
