--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <button type="button" id="begButton" onclick="dealAll(player,deck),beg(player,kicked)">Beg?</button>
-    <div class="hand" id="player1"> </div>
-    <div class="hand" id="player2"> </div>
-    <div class="hand" id="player3"> </div>
-    <div class="hand" id="player4"> </div>
+    <button type="button" id="begButton" onclick="dealAll(player,deck),beg(player)">Beg?</button>
+    <div class="hand" id="player1"><a class="card1"></a></div>
+    <div class="hand" id="player2"><a class="card2"></a></div>
+    <div class="hand" id="player3"><a class="card3"></a> </div>
+    <div class="hand" id="player4"><a class="card4"></a> </div>
     <br>
     <div id="kicked"> </div>
+    <br>
+    <div id="playerTurn"> </div>
+    <div id="demo"></div>
     <script src="script.js"></script>
   </body>
 </html>
