--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <button type="button" id="begButton" onclick="dealAll(player,deck),beg(player)">Beg?</button>
+    <button type="button" id="begButton" onclick="dealAll(player,deck),beg(player,playerTurn)">Beg?</button>
     <div class="hand" id="player1"><a class="card1"></a></div>
     <div class="hand" id="player2"><a class="card2"></a></div>
     <div class="hand" id="player3"><a class="card3"></a> </div>
