Cards are now played based on whose turn it is

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     <div id="kicked"> </div>
     <br>
     <div id="playerTurn"> </div>
-    <div id="demo"></div>
+    <br>
+    <div id="played1"></div>
+    <div id="played2"></div>
+    <div id="played3"></div>
+    <div id="played4"></div>
     <script src="script.js"></script>
   </body>
 </html>
