Working on determining who won the lift

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <button type="button" id="begButton" onclick="dealAll(player,deck),beg(player,playerTurn)">Beg?</button>
+    <button type="button" id="begButton" onclick="dealAll(player,deck),beg(player,playerTurn,lift)">Beg?</button>
     <div class="hand" id="player1"><a class="card0"></a></div>
     <div class="hand" id="player2"><a class="card1"></a></div>
     <div class="hand" id="player3"><a class="card2"></a> </div>
@@ -21,6 +21,8 @@
     <div id="played2"></div>
     <div id="played3"></div>
     <div id="played4"></div>
+    <br>
+    <div id="liftWinner"></div>
     <script src="script.js"></script>
   </body>
 </html>
