Beg can only be clicked once, redeals if previously kicked suit is kicked again

--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <button type="button" id="begButton" onclick="beg(player,playerTurn,lift,deck,'any')">Beg?</button>
+    <button type="button" id="begButton" onclick="beg(player,playerTurn,lift,deck,'any',kicked)">Beg?</button>
     <div class="hand" id="player1"><a class="card0"></a></div>
     <div class="hand" id="player2"><a class="card1"></a></div>
     <div class="hand" id="player3"><a class="card2"></a> </div>
     <div class="hand" id="player4"><a class="card3"></a> </div>
     <br>
-    <div id="kicked"> </div>
+    <div id="kicked">Kicked: </div>
     <br>
-    <div id="playerTurn"> </div>
+    <div id="playerTurn"></div>
     <br>
     <div id="played1"></div>
     <div id="played2"></div>
