Added points for game calculation

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
     <br>
     <div id="kicked">Kicked: </div>
     <br>
+    <div id="score1">Team 1 Score: 0</div>
+    <div id="score2">Team 2 Score: 0</div>
+    <br>
     <div id="playerTurn"></div>
     <br>
     <div id="played1"></div>
@@ -23,6 +26,7 @@
     <div id="played4"></div>
     <br>
     <div id="liftWinner"></div>
+    <div id="gameWinner"></div>
     <script src="script.js"></script>
   </body>
 </html>
