--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <button type="button" id="begButton" onclick="beg(player,playerTurn,lift,deck,'any',kicked)">Beg?</button>
+    <button type="button" id="begButton">Beg?</button>
     <div class="hand" id="player1"><a class="card0"></a></div>
     <div class="hand" id="player2"><a class="card1"></a></div>
     <div class="hand" id="player3"><a class="card2"></a> </div>
