Added high and low calculation

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <br>
     <div id="liftWinner"></div>
     <div id="gameWinner"></div>
+    <div id="highWinner"></div>
+    <div id="lowWinner"></div>
     <script src="script.js"></script>
   </body>
 </html>
