--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <div id="totalPoints"> Score: 0 - 0 </div>
+    <br>
     <button type="button" id="begButton">Beg?</button>
     <div class="hand" id="player1"><a class="card0"></a></div>
     <div class="hand" id="player2"><a class="card1"></a></div>
@@ -29,6 +31,7 @@
     <div id="gameWinner"></div>
     <div id="highWinner"></div>
     <div id="lowWinner"></div>
+    <div id="jackWinner"></div>
     <script src="script.js"></script>
   </body>
 </html>
