Added score keeping

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <div id="totalPoints"> Score: 0 - 0 </div>
+    <div id="totalScore"> Score: 0 - 0 </div>
     <br>
     <button type="button" id="begButton">Beg?</button>
     <div class="hand" id="player1"><a class="card0"></a></div>
