Added determining which team won the game

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="totalScore"> Score: 0 - 0 </div>
+    <div id="winner"></div>
     <br>
     <button type="button" id="begButton">Beg?</button>
     <div class="hand" id="player1"><a class="card0"></a></div>
