Beg button now disappears when the player cannot beg

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id="totalScore"> Score: 0 - 0 </div>
     <div id="winner"></div>
     <br>
-    <button type="button" id="begButton">Beg?</button>
+    <div id="beg"><button type="button" id="begButton">Beg?</button></div>
     <div class="hand" id="player1"><a class="card0"></a></div>
     <div class="hand" id="player2"><a class="card1"></a></div>
     <div class="hand" id="player3"><a class="card2"></a> </div>
